--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
-@plugin "daisyui";
-
-@theme {
-    --breakpoint-xs: 30rem;
-    --breakpoint-2xl: 100rem;
-    --breakpoint-3xl: 120rem;
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, cupcake;
 }
+
+
